# prim-compat

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  README.md  default.nix  flake.nix  hie.yaml  prim-compat.cabal  release.nix  shell.nix
.github/workflows/: ghc8107.yml  ghc902.yml  ghc924.yml
nix/: nixpkgs.nix  pkgs.nix
nix/exts/: prim-compat.nix
nix/overlays/: haskell.nix
src/Data/Int/Prim/: Compat.hs
src/Data/Word/Prim/: Compat.hs
test/: Test.hs
test/Test/: Core.hs  Int.hs  Word.hs
test/Test/Int/: Int.hs  Int16.hs  Int32.hs  Int8.hs
test/Test/Word/: Word.hs  Word16.hs  Word32.hs  Word8.hs
