cabal-version: 2.4

name:        prim-compat
category:    Data
version:     1.0.0
synopsis:    Lightweight ghc-prim backwards compatibility library.
description: Lightweight ghc-prim backwards compatibility library.

author:       jake
maintainer:   jacobleach@protonmail.com
copyright:    2022, Jacob Leach
homepage:     https://github.com/riz0id/prim-compat
license:      ISC
license-file: LICENSE
build-type:   Simple

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.2.2
  GHC == 9.0.2
  GHC == 8.10.7

flag llvm
  Description: Compile using the LLVM backend.
  Default:     False
  Manual:      True

library
  default-language: Haskell2010
  import:           common
  hs-source-dirs:   src

  default-extensions: 
    CPP MagicHash

  ghc-options:
    -- Warnings & Sanity checking
    -Wall
    -Wcompat
    -Wcpp-undef
    -Werror
    -Widentities
    -Wmissing-export-lists

    -- Optimization
    -O2
    -fregs-iterative

  if flag(llvm) 
    ghc-options: -fllvm 

  build-depends:
    , base     >= 4.14.3 && < 4.17
    , ghc-prim >= 0.6.1  && < 0.9

  exposed-modules:
    Data.Int.Prim.Compat
    Data.Word.Prim.Compat

source-repository head
  type:     git
  location: https://github.com/riz0id/prim-int
