cabal-version: 2.4

name:        prim-compat
category:    Data
version:     1.0.0
synopsis:    Lightweight ghc-prim wrappers for backwards compatibility.
description: Lightweight ghc-prim wrappers for backwards compatibility.

author:       jake
maintainer:   jacobleach@protonmail.com
copyright:    2022, Jacob Leach
homepage:     https://github.com/riz0id/prim-compat
license:      ISC
license-file: LICENSE
build-type:   Simple

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.8.1
  GHC == 9.2.4
  GHC == 9.0.2
  GHC == 8.10.7

source-repository head
  type:     git
  location: https://github.com/riz0id/prim-compat

flag llvm
  Description: Compile using the LLVM backend.
  Default:     False
  Manual:      True

common common
  default-language: Haskell2010

  default-extensions:
    MagicHash

  ghc-options:
    -Wall
    -Wcompat
    -Wcpp-undef
    -Widentities
    -Wmissing-export-lists

    -- `-j2` is set (as opposed to `-j`) since this package provides only a few
    -- modules.
    -j2

    -- `-O0` is explicitly set since none of the functions exported by this
    -- library would benefit from higher optimization levels. This helps reduce
    -- compile times.
    -O0

    -- `-fmax-simplifier-iterations` is set to keep compile times in check.
    -- The functions in this library are simple and do not need very many
    -- simplifier passes.
    -fmax-simplifier-iterations=2

    -- `-fregs-iterative` enable the iterative graph coloring register
    -- allocator.
    -fregs-iterative

  if flag(llvm)
    ghc-options: -fllvm

  build-depends:
    , base

library
  import:         common
  hs-source-dirs: src
  ghc-options:    -Werror

  default-extensions:
    CPP ImportQualifiedPost

  build-depends:
    , ghc-prim

  exposed-modules:
    Data.Int.Prim.Compat
    Data.Word.Prim.Compat

test-suite prim-compat-test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs

  default-extensions:
    BlockArguments ViewPatterns

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"

  build-depends:
    , hedgehog
    , prim-compat
    , tasty
    , tasty-hedgehog

  other-modules:
    Test.Core
    Test.Int
    Test.Int.Int
    Test.Int.Int8
    Test.Int.Int16
    Test.Int.Int32
    Test.Word
    Test.Word.Word
    Test.Word.Word8
    Test.Word.Word16
    Test.Word.Word32
